Prepare Article Post + fixed dropdown overflow bug

--- a/resources/assets/sass/_asso.scss
+++ b/resources/assets/sass/_asso.scss
@@ -1,8 +1,10 @@
 .asso {
 	position: relative;
 	padding-top: 44px;
+	overflow-y: auto;
 
 	.nav.nav-tabs.asso {
+		overflow-y: visible;
 		border: none;
 		position: fixed;
 		margin-top: 0%;
